fixed project images on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -297,7 +297,7 @@ a {
 
 @media screen and (width <=768px) {
   .star-text-div {
-    left: 26%;
+    left: 40%;
   }
 
   .star-text-div-right {
