--- a/app/styles/projectNav.module.css
+++ b/app/styles/projectNav.module.css
@@ -41,6 +41,7 @@
 
 .listTitleMobile {
   font-size: var(--mobile-font-size);
+  font-size: 0.5rem;
   width: fit-content;
   /* padding-bottom: 30px; */
   /* margin-top: -2.5px; */
@@ -83,9 +84,9 @@
 
 .listImage {
   width: 80%;
-  height: auto;
+  height: 100px;
   display: block;
-  object-fit: contain;
+  object-fit: cover;
   object-position: left;
   /* border-radius: 3px;
   border: 1px solid var(--title); */
